fix use of some deprecated method calls
- `TarArchiveInputStream.getNextTarEntry` is deprecated as of the
  latest version of apache's `commons-compress` (`1.25.0`)
- `java.net.URL(String)` constructor has been deprecated in some recent
  java version